Try to fix files not found on server issue by moving locations of files around

--- a/interactives/cross_cultural/index.html
+++ b/interactives/cross_cultural/index.html
@@ -5,12 +5,12 @@
 <head>
   <meta charset="utf-8" />
   <title>Cross Cultural Awareness</title>
-  <link rel="stylesheet" type="text/css" href="../../ejss.css" />
+  <link rel="stylesheet" type="text/css" href="../../css/ejss.css" />
   <link rel="stylesheet" type="text/css" href="cross_cultural/css/styles.css" />
   <link rel="stylesheet" type="text/css" href="cross_cultural/css/bootstrap.min.css" />
-  <script src="_ejs_library/scripts/common_script.js"></script>
-  <script src="_ejs_library/scripts/textresizedetector.js"></script>
-  <script src="_ejs_library/ejsS.v1.min.js"></script>
+  <script src="../../js/common_script.js"></script>
+  <script src="../../js/textresizedetector.js"></script>
+  <script src="../../js/ejsS.v1.min.js"></script>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
       </div>
       <div class="cc_right" style="float:right"> Released under a <a rel="license" target="_blank"
           href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.en_US"> <img
-            alt="Creative Commons Attribution-NonCommercial-ShareAlike" src="_ejs_library/images/cc_icon.png" /> </a>
+            alt="Creative Commons Attribution-NonCommercial-ShareAlike" src="../../img/cc_icon.png" /> </a>
         license.</div>
     </div>
   </div>
