Fix incorrect link

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h2>Interactives</h2>
             <div class="interactives">
                 <article class="interactive">
-                    <h3><a href="./interactives/cross_cultural/index.html">Future Self Quiz</a></h3>
+                    <h3><a href="">Future Self Quiz</a></h3>
                     <img src="./img/fsq-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="">Religions</a></h3>
+                    <h3><a href="./interactives/cross_cultural/index.html">Religions</a></h3>
                     <img src="./img/religion-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
