Add World War II interactive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="./img/religion-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="">World War II</a></h3>
+                    <h3><a href="./interactives/world_war_ii/index.html">World War II</a></h3>
                     <img src="./img/wwii-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
