Update homepage links for accessing the interactivess

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                     <img src="./img/wwii-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="">Node Nexus</a></h3>
+                    <h3><a href="./interactives/tech_savvy/index.html">Node Nexus</a></h3>
                     <img src="./img/node-nexus-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="">Sustainability</a></h3>
+                    <h3><a href="./interactives/sustainability/index.html">Sustainability</a></h3>
                     <img src="./img/sustainability-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="">Our Garden</a></h3>
+                    <h3><a href="./interactives/guarding_your_garden/index.html">Our Garden</a></h3>
                     <img src="./img/garden-screengrab.png" alt="">
                 </article>
             </div>
