Fix css filename typo

--- a/interactives/guarding_your_garden/index.html
+++ b/interactives/guarding_your_garden/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <title>Knowing Your Neighbourhood</title>
   <link rel="stylesheet" type="text/css" href="../../css/ejss.css" />
+  <link rel="stylesheet" type="text/css" href="guarding_your_garden/css/styles.css" />
   <script src="../../js/common_script.js"></script>
   <script src="../../js/textresizedetector.js"></script>
   <script src="../../js/ejsS.v1.min.js"></script>
