Amend titles to the correct ones

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Year End Evaluation</h1>
+        <h1>CotF Year End Engagement (YEE)</h1>
         <section class="hero">
             <img src="./img/website banner may 2023-1.png" alt="">
         </section>
@@ -25,11 +25,11 @@
                     <img src="./img/fsq-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="./interactives/cross_cultural/index.html">Religions</a></h3>
+                    <h3><a href="./interactives/cross_cultural/index.html">Cross Cultural</a></h3>
                     <img src="./img/religion-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="./interactives/world_war_ii/index.html">World War II</a></h3>
+                    <h3><a href="./interactives/world_war_ii/index.html">Heritage Harvest</a></h3>
                     <img src="./img/wwii-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
@@ -37,11 +37,11 @@
                     <img src="./img/node-nexus-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="./interactives/sustainability/index.html">Sustainability</a></h3>
+                    <h3><a href="./interactives/sustainability/index.html">EcoSort</a></h3>
                     <img src="./img/sustainability-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="./interactives/guarding_your_garden/index.html">Our Garden</a></h3>
+                    <h3><a href="./interactives/guarding_your_garden/index.html">Thinktank Terrace</a></h3>
                     <img src="./img/garden-screengrab.png" alt="">
                 </article>
             </div>
