Apply requested changes from Joseph

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <body>
     <header>
-        <h1>CotF Year End Engagement (YEE)</h1>
         <section class="hero">
-            <img src="./img/website banner may 2023-1.png" alt="">
+            <img src="./img/breakout-session-background.png" alt="">
         </section>
     </header>
     <main>
@@ -25,6 +24,12 @@
                     <img src="./img/fsq-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
+                    <h3><a href="./interactives/tech_savvy/index.html">Node Nexus</a></h3>
+                    <img src="./img/node-nexus-screengrab.png" alt="">
+                </article>
+
+                <!-- The other interactives to be hidden first as they will be released during launch. -->
+                <!-- <article class="interactive">
                     <h3><a href="./interactives/cross_cultural/index.html">Cross Cultural</a></h3>
                     <img src="./img/religion-screengrab.png" alt="">
                 </article>
@@ -33,17 +38,13 @@
                     <img src="./img/wwii-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
-                    <h3><a href="./interactives/tech_savvy/index.html">Node Nexus</a></h3>
-                    <img src="./img/node-nexus-screengrab.png" alt="">
-                </article>
-                <article class="interactive">
                     <h3><a href="./interactives/sustainability/index.html">EcoSort</a></h3>
                     <img src="./img/sustainability-screengrab.png" alt="">
                 </article>
                 <article class="interactive">
                     <h3><a href="./interactives/guarding_your_garden/index.html">Thinktank Terrace</a></h3>
                     <img src="./img/garden-screengrab.png" alt="">
-                </article>
+                </article> -->
             </div>
         </article>
     </main>
